--- a/templates/live.html
+++ b/templates/live.html
@@ -176,7 +176,7 @@
         
         async function updateStats() {
             try {
-                const response = await fetch('http://localhost:8000/stats');
+                const response = await fetch('https://inference-proxy.onrender.com/stats');
                 const data = await response.json();
                 
                 // Update status
